--- a/input.html
+++ b/input.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NHẬP LIỆU | BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</title>
+    <link rel="shortcut icon" href="timbus.vn.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/input.css" />
     <link rel="stylesheet" href="css/font.css" />
-    <link rel="icon" type="image/x-icon" href="assets/image/timbus.vn.ico" />
     <script src="js/dieu_khien_LED.js"></script>
     <script src="js/input.js"></script>
     <script src="js/window_onload.js"></script>
     <script src="js/theme.js"></script>
-  </head>
-  <body>
+</head>
+<body>
     <div class="Nhap">
       <p id="NhapLabel">NHẬP DỮ LIỆU TUYẾN</p>
       
