--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font.css" />
-    <link rel="shortcut icon" href="timbus.vn.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="timbus.vn.png" type="image/x-icon">
     <script src="js/dieu_khien_LED.js"></script>
     <script src="js/hien_thi_LED.js"></script>
     <script src="js/window_onload.js"></script>
