--- a/input.html
+++ b/input.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NHẬP LIỆU | BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</title>
-    <link rel="shortcut icon" href="timbus.vn.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="timbus.vn.png" type="image/x-icon">
     <link rel="stylesheet" href="css/input.css" />
     <link rel="stylesheet" href="css/font.css" />
     <script src="js/dieu_khien_LED.js"></script>
