--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font.css" />
-    <link rel="shortcut icon" href="timbus.vn.png" type="image/x-icon">
+    <link rel="icon" href="timbus.vn.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="timbus.vn.png">
     <script src="js/dieu_khien_LED.js"></script>
     <script src="js/hien_thi_LED.js"></script>
     <script src="js/window_onload.js"></script>
@@ -113,7 +114,7 @@
       <div class="thongTin">
         <p class="UngDungHoTroTotNhat">BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</p>
         <div id="logobus">
-          
+          <img src="assets/image/hanoibus_green.png" style="zoom: 60%" alt="">
           <!-- <img src="assets/image/HANOI BRT.png" alt="HANOI BRT" /> -->
           <!-- <img src="assets/image/bus_lien_ninh.png" alt="BUSLIENINH" /> -->
           <!-- <img src="assets/image/tt_tan_dat.png" alt="TANDAT" /> -->
@@ -121,9 +122,7 @@
           <img src="assets/image/logohanoibus.png" alt="TRANSERCO HANOIBUS" />
           <img src="assets/image/vinbus.png" alt="VINBUS" /> -->
           <!-- <img src="assets/image/oto_vantai_hatay.png" alt=""> -->
-           <img src="/assets/image/20nam_transerco.png" alt="">
         </div>
-        <p></p>
         <p class="UngDungHoTroTotNhat">
           Tác giả: <a href= "https://github.com/mhieu1296" target="_blank" style="color: red">NGUYỄN MINH HIẾU</a>, KTPM02 K19 HAUI ✨
           <br />
