--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font.css" />
-    <link rel="icon" href="timbus.vn.ico" type="image/x-icon">
-    <link rel="icon" type="image/png" sizes="32x32" href="timbus.vn.png">
     <script src="js/dieu_khien_LED.js"></script>
     <script src="js/hien_thi_LED.js"></script>
     <script src="js/window_onload.js"></script>
     <script src="js/thu_gon_noi_dung.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/xac_nhan_xoa_du_lieu_tronglocal.js"></script>
+    <link rel="shortcut icon" href="timbus.vn.ico" type="image/x-icon">
 </head>
 <body>
+    <body>
     <div class="LED"> 
       <!-- <p class="version">v1.0</p> -->
       <p id="maTuyen"></p>
@@ -132,4 +132,5 @@
     </div>
     <script src="js/event_listeners.js"></script>
   </body>
+</body>
 </html>
