fix favicon bugs

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LED XE BUÝT BÁN TỰ ĐỘNG</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font.css" />
     <script src="js/dieu_khien_LED.js"></script>
@@ -14,11 +14,9 @@
     <script src="js/speed_indicator.js"></script>
     <script src="js/marquee.js"></script>
     <script src="js/event_listeners.js"></script>
-    
-
-    <link rel="shortcut icon" href="timbus.vn.ico" type="image/x-icon" />
-  </head>
-  <body>
+    <link rel="icon" href="/timbus.vn.ico">
+</head>
+<body>
     <div class="LED">
       <!-- <p class="version">v1.0</p> -->
       <p id="maTuyen"></p>
@@ -163,4 +161,5 @@
       </div>
     </div>
   </body>
+</body>
 </html>
