fix some responsive bugs

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <button class="DungLed">ĐÓNG BĂNG</button>
         <button class="XeVeGara">DỪNG P.VỤ</button>
         <button class="HuyDongRaTuyen">XE RA TUYẾN</button>
-        <button class="CHAYCHU">C.CHỮ&C.GIỮA</button>
+        <button class="CHAYCHU">CHẠY CHỮ</button>
         <!-- <button class="HuyChayChu">HỦY C.CHỮ</button> -->
       </div>
       <p class="BangDieuKhienLabel">ĐIỀU CHỈNH TỐC ĐỘ CHẠY CHỮ</p>
@@ -117,11 +117,10 @@
           <p id="mui_ten2">➜</p>
           <p id="diemCuoiLuu"></p>
         </div>
-        <!-- <p id="xiNghiepLuu"></p> -->
         <p class="BangDieuKhienLabel">TRẠNG THÁI HOẠT ĐỘNG</p>
         <table class="Table">
           <tr>
-            <th>ĐANG CHẠY?</th>
+            <th>CHẠY?</th>
             <th>TẠM DỪNG?</th>
             <th>CHẠY CHỮ?</th>
             <th>MODE</th>
