--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
           <img src="assets/image/vinbus.png" alt="VINBUS" /> -->
           <!-- <img src="assets/image/oto_vantai_hatay.png" alt=""> -->
         </div>
+        <a href="hdsd.html" class="UngDungHoTroTotNhat">HƯỚNG DẪN SỬ DỤNG</a>
         <p class="UngDungHoTroTotNhat">
           Tác giả:
           <a
