fix loi nut chay chu nhan 2 lan va them 1 so tinh nang nho nhu thay doi mau cua cac nut chon mode

--- a/index.html
+++ b/index.html
@@ -124,26 +124,22 @@
             <th>TẠM DỪNG?</th>
             <th>CHẠY CHỮ?</th>
             <th>MODE</th>
+            <!-- <th>XE ĐIỆN 1</th>  -->
+            <!-- không phải xe buýt điện mà là CÔNG TY CỔ PHẦN XE ĐIỆN HÀ NỘI -->
           </tr>
           <tr>
             <td id="isRunning"></td>
             <td id="isPausing">NO</td>
             <td id="isTextMoving">NO</td>
             <td id="MODE">THƯỜNG</td>
+            <!-- <td id="isXD1">NO</td> -->
           </tr>
         </table>
       </div>
       <div class="thongTin">
         <p class="UngDungHoTroTotNhat">BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</p>
         <div id="logobus">
-          <img src="assets/image/hanoibus_green.png" style="zoom: 60%" alt="" />
-          <!-- <img src="assets/image/HANOI BRT.png" alt="HANOI BRT" /> -->
-          <!-- <img src="assets/image/bus_lien_ninh.png" alt="BUSLIENINH" /> -->
-          <!-- <img src="assets/image/tt_tan_dat.png" alt="TANDAT" /> -->
-          <!-- <img src="assets/image/baoyengroup.png" alt="BAOYENGROUP" />
-          <img src="assets/image/logohanoibus.png" alt="TRANSERCO HANOIBUS" />
-          <img src="assets/image/vinbus.png" alt="VINBUS" /> -->
-          <!-- <img src="assets/image/oto_vantai_hatay.png" alt=""> -->
+          <img src="assets/image/logohanoibus.png" alt="Transerco Hanoibus" srcset="">
         </div>
         <a href="hdsd.html" class="UngDungHoTroTotNhat">HƯỚNG DẪN SỬ DỤNG</a>
         <p class="UngDungHoTroTotNhat">
@@ -159,6 +155,7 @@
           Vì sứ mệnh thay thế cho biển lật! <br />
           Bản quyền các logo thuộc về các cty vận tải công cộng
         </p>
+        
       </div>
     </div>
   </body>
