--- a/input.html
+++ b/input.html
@@ -87,8 +87,9 @@
         </table>
       </div>
       <div class="NutBam">
-        <button class="NhapDuLieu" onclick="NhapDuLieu()">LƯU</button>
-        <a href="/"><button class="NhapDuLieu">QUAY LẠI</button></a>
+        <button onclick="NhapDuLieu()">LƯU</button>
+        <a href="/"><button ">QUAY LẠI</button></a>
+        <button onclick="tuyenDemo()">TUYẾN DEMO</button>
       </div>
       <p id="canhBao"></p>
     </div>
