them toast va cua so popup

--- a/hdsd.html
+++ b/hdsd.html
@@ -12,7 +12,7 @@
         --bg-sidebar: #f6f8fa;
         --border: #d0d7de;
         --text: #24292f;
-        --link: rgb(17, 205, 142);
+        --link: rgba(66, 113, 163);
       }
 
       * {
@@ -80,18 +80,18 @@
       h1 {
         font-size: 32px;
         margin-top: 0;
-        color: rgb(17, 205, 142);
+        color: rgba(66, 113, 163);
       }
       h2 {
         font-size: 24px;
         margin-top: 48px;
         border-bottom: 1px solid var(--border);
-        color: rgb(17, 205, 142);
+        color: rgba(66, 113, 163);
       }
       h3 {
         font-size: 20px;
         margin-top: 36px;
-        color: rgb(17, 205, 142);
+        color: rgba(66, 113, 163);
       }
 
       ul,
@@ -231,6 +231,9 @@
             <strong>Thông tin trạng thái</strong>: Bảng hiển thị trạng thái thời
             gian thực của LED (Đang chạy, Tạm dừng, Đang chạy chữ, Mode hiện
             tại).
+          </li>
+          <li>
+            <strong>Ngày/Đêm</strong>: Làm tối phần còn lại của trang, trừ phần LED để nổi bật trong đêm.
           </li>
         </ul>
 
@@ -521,7 +524,7 @@
         <img src="/assets/image/bienlat5.png" />
         <img src="/assets/image/bienlat4.png" />
 
-        <h3>NGƯỜI PHÁT TRIỂN: NGUYỄN MINH HIẾU - KTPM02 ĐHCNHN<br> CÁC LOGO THUỘC VỀ CÁC CTY VẬN TẢI</h3>
+        <h3>NGƯỜI PHÁT TRIỂN: NGUYỄN MINH HIẾU - KTPM02 ĐHCNHN<br>Vì sứ mệnh thay thế cho biển lật! <br>CÁC LOGO THUỘC VỀ CÁC CTY VẬN TẢI <br></h3>
         <a href="/"><p>Về trang chủ<p></a>
       </main>
     </div>
