--- a/index.html
+++ b/index.html
@@ -1,165 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LED XE BUÝT BÁN TỰ ĐỘNG</title>
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/font.css" />
-    <script src="js/dieu_khien_LED.js"></script>
-    <script src="js/hien_thi_LED.js"></script>
-    <script src="js/window_onload.js"></script>
-    <script src="js/thu_gon_noi_dung.js"></script>
-    <script src="js/xac_nhan_xoa_du_lieu_tronglocal.js"></script>
-    <script src="js/speed_indicator.js"></script>
-    <script src="js/marquee.js"></script>
-    <script src="js/event_listeners.js"></script>
-    <link rel="icon" href="/timbus.vn.ico">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LED XE BUÝT BÁN TỰ ĐỘNG</title>
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/font.css" />
+  <link rel="stylesheet" href="css/popup.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <script src="js/dieu_khien_LED.js"></script>
+  <script src="js/hien_thi_LED.js"></script>
+  <script src="js/window_onload.js"></script>
+  <script src="js/thu_gon_noi_dung.js"></script>
+  <script src="js/xac_nhan_xoa_du_lieu_tronglocal.js"></script>
+  <script src="js/speed_indicator.js"></script>
+  <script src="js/marquee.js"></script>
+  <script src="js/event_listeners.js"></script>
+  <script src="js/popup.js" defer></script>
+  <link rel="icon" href="/timbus.vn.ico">
 </head>
+
 <body>
-    <div id="LED">
-      <!-- <p class="version">LED_V1.0_HANOI_72</p> -->
-      <p id="maTuyen"></p>
-      <div class="NoiDungChayChu" data-force-hide="false">
-        <div class="marquee" id="route-info" data-enabled="true">
-          <p id="diemDau"></p>
-          <img
-            id="mui_ten_xanh1"
-            src="assets/image/mui_ten_xanh.gif"
-            alt="->"
-          />
-          <p id="diemGiua"></p>
-          <img
-            id="mui_ten_xanh2"
-            src="assets/image/mui_ten_xanh.gif"
-            alt="->"
-          />
-          <p id="diemCuoi"></p>
-        </div>
-        <div class="marquee" id="xiNghiep" data-enabled="false">
-          <p>ĐÂY LÀ TÊN XÍ NGHIỆP</p>
-        </div>
-        <p id="MaTuyenCanGiua"></p>
-        <p id="HuyDongRaTuyen">XE RA TUYẾN</p>
-        <p id="XeVeGara">XE DỪNG PHỤC VỤ</p>
-        <div class="image">
-          <img
-            id="hanoibus"
-            src="assets/image/hanoibus_green.png"
-            alt="HANOIBUS"
-          />
-          <img
-            id="transerco"
-            src="assets/image/transerco.png"
-            alt="TRANSERCO"
-          />
-        </div>
+  <div id="LED">
+    <!-- <p class="version">LED_V1.0_HANOI_72</p> -->
+    <p id="maTuyen"></p>
+    <div class="NoiDungChayChu" data-force-hide="false">
+      <div class="marquee" id="route-info" data-enabled="true">
+        <p id="diemDau"></p>
+        <img id="mui_ten_xanh1" src="assets/image/mui_ten_xanh.gif" alt="->" />
+        <p id="diemGiua"></p>
+        <img id="mui_ten_xanh2" src="assets/image/mui_ten_xanh.gif" alt="->" />
+        <p id="diemCuoi"></p>
+      </div>
+      <div class="marquee" id="xiNghiep" data-enabled="false">
+        <p>ĐÂY LÀ TÊN XÍ NGHIỆP</p>
+      </div>
+      <p id="MaTuyenCanGiua"></p>
+      <p id="HuyDongRaTuyen">XE RA TUYẾN</p>
+      <p id="XeVeGara">XE DỪNG PHỤC VỤ</p>
+      <div class="image">
+        <img id="hanoibus" src="assets/image/hanoibus_green.png" alt="HANOIBUS" />
+        <img id="transerco" src="assets/image/transerco.png" alt="TRANSERCO" />
       </div>
     </div>
-    <div class="ThuGonNoiDung">
-      <div class="NutBam">
-        <button class="ChayLed" id="xanhla">CHẠY</button>
-        <button class="RESET">TẮT</button>
-        <button class="RESTART">RELOAD</button>
-        <button class="Details">NÂNG CAO</button>
-        <button class="DayAndNight">NGÀY/ĐÊM</button>
-      </div>
+  </div>
+  <div class="ThuGonNoiDung">
+    <div class="NutBam">
+      <button class="ChayLed" id="xanhla">CHẠY</button>
+      <button class="RESET">TẮT</button>
+      <button class="RESTART">RELOAD</button>
+      <button class="Details">NÂNG CAO</button>
+      <button class="DayAndNight">NGÀY/ĐÊM</button>
     </div>
-    <div id="BangDieuKhien" class="hiddenDiv">
-      <p class="normalText">BẢNG ĐIỀU KHIỂN</p>
-      <div class="NutBam">
-        <button class="ChayLed" id="xanhla">CHẠY</button>
-        <button class="RESET">TẮT</button>
-        <button class="daoChieuTuyen">ĐẢO CHIỀU</button>
-        <button class="DungLed">ĐÓNG BĂNG</button>
-        <button class="XeVeGara">DỪNG P.VỤ</button>
-        <button class="HuyDongRaTuyen">XE RA TUYẾN</button>
-        <button class="CHAYCHU">CHẠY CHỮ</button>
-        <!-- <button class="HuyChayChu">HỦY C.CHỮ</button> -->
-      </div>
-      <p class="normalText">ĐIỀU CHỈNH TỐC ĐỘ CHẠY CHỮ</p>
-      <input
-        type="range"
-        name="speed"
-        id="speedControl"
-        min="50"
-        max="1000"
-        value="200"
-        step="25"
-      />
-      <p class="normalText" id="speedValue">200 px/s</p>
-      <p class="normalText">CHỌN MODE CHẠY</p>
-      <div class="NutBam" id="modeSelection">
-        <button class="XEDIEN1">XE ĐIỆN 1</button>
-        <p style="color: rgba(66, 113, 163); font-size: 25px; font-weight: bolder;">|</p>
-        <button class="XEDIEN2">XE ĐIỆN 2</button>
-        <button class="THUONG">THƯỜNG</button>
-        <button class="LIENNINH">LIÊN NINH</button>
-        <button class="HANOIBRT">HANOI BRT</button>
-        <button class="BAOYEN">BẢO YẾN</button>
-        <button class="DEMO">DEMO</button>
-      </div>
-      <p class="normalText">NHẬP, XÓA DỮ LIỆU TUYẾN</p>
-      <div class="NutBam">
-        <a href="input.html">
-          <button class="NhapDuLieu">NHẬP</button>
-        </a>
-        <button class="NhapDuLieu">XÓA</button>
-      </div>
+  </div>
+  <div id="BangDieuKhien" class="hiddenDiv">
+    <p class="normalText">BẢNG ĐIỀU KHIỂN</p>
+    <div class="NutBam">
+      <button class="ChayLed" id="xanhla">CHẠY</button>
+      <button class="RESET">TẮT</button>
+      <button class="daoChieuTuyen">ĐẢO CHIỀU</button>
+      <button class="DungLed">ĐÓNG BĂNG</button>
+      <button class="XeVeGara">DỪNG P.VỤ</button>
+      <button class="HuyDongRaTuyen">XE RA TUYẾN</button>
+      <button class="CHAYCHU">CHẠY CHỮ</button>
+      <!-- <button class="HuyChayChu">HỦY C.CHỮ</button> -->
     </div>
-    <div id="container">
-      <div id="trangThai">
-        <p class="normalText">THÔNG TIN TUYẾN</p>
-        <div class="tuyenPreview">
-          <p id="maTuyenLuu"></p>
-          <p id="diemDauLuu"></p>
-          <p id="mui_ten1">➜</p>
-          <p id="diemGiuaLuu"></p>
-          <p id="mui_ten2">➜</p>
-          <p id="diemCuoiLuu"></p>
-        </div>
-        <p class="normalText">TRẠNG THÁI HOẠT ĐỘNG</p>
-        <table class="Table">
-          <tr>
-            <th>CHẠY?</th>
-            <th>TẠM DỪNG?</th>
-            <th>CHẠY CHỮ?</th>
-            <th>MODE</th>
-            <!-- <th>XE ĐIỆN 1</th>  -->
-            <!-- không phải xe buýt điện mà là CÔNG TY CỔ PHẦN XE ĐIỆN HÀ NỘI (454 Phạm Văn Đồng) -->
-          </tr>
-          <tr>
-            <td id="isRunning"></td>
-            <td id="isPausing">NO</td>
-            <td id="isTextMoving">NO</td>
-            <td id="MODE">THƯỜNG</td>
-            <!-- <td id="isXD1">NO</td> -->
-          </tr>
-        </table>
-      </div>
-      <div id="thongTin" class="hiddenDiv">
-        <p class="normalText">BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</p>
-        <div id="logobus">
-          <p class="normalText">Special Thanks to</p>
-          <img src="assets/image/logohanoibus.png" alt="Transerco Hanoibus" srcset="">
-        </div>
-        <a href="hdsd.html" ><p class="normalText">HƯỚNG DẪN SỬ DỤNG</p></a>
-        <p class="normalText">
-          Tác giả:
-          <a
-            href="https://github.com/mhieu1296"
-            target="_blank"
-            style="color: red"
-            >NGUYỄN MINH HIẾU</a
-          >, KTPM02 K19 HAUI ✨
-          <br />
-          Code có xấu xin các anh chị bỏ qua cho nhé 😭 <br />
-          Vì sứ mệnh thay thế cho biển lật! <br />
-          Bản quyền các logo thuộc về các cty vận tải công cộng
-        </p>
-        
-      </div>
+    <p class="normalText">ĐIỀU CHỈNH TỐC ĐỘ CHẠY CHỮ</p>
+    <input type="range" name="speed" id="speedControl" min="50" max="1000" value="200" step="25" />
+    <p class="normalText" id="speedValue">200 px/s</p>
+    <p class="normalText">CHỌN MODE CHẠY</p>
+    <div class="NutBam" id="modeSelection">
+      <button class="XEDIEN1">XE ĐIỆN 1</button>
+      <p style="color: rgba(66, 113, 163); font-size: 25px; font-weight: bolder;">|</p>
+      <button class="XEDIEN2">XE ĐIỆN 2</button>
+      <button class="THUONG">THƯỜNG</button>
+      <button class="LIENNINH">LIÊN NINH</button>
+      <button class="HANOIBRT">HANOI BRT</button>
+      <button class="BAOYEN">BẢO YẾN</button>
+      <button class="DEMO">DEMO</button>
     </div>
-  </body>
+    <p class="normalText">NHẬP, XÓA DỮ LIỆU TUYẾN</p>
+    <div class="NutBam">
+      <a href="input.html">
+        <button class="NhapDuLieu">NHẬP</button>
+      </a>
+      <button class="XoaDuLieu">XÓA</button>
+    </div>
+  </div>
+  <div id="container">
+    <div id="trangThai">
+      <p class="normalText">THÔNG TIN TUYẾN</p>
+      <div class="tuyenPreview">
+        <p id="maTuyenLuu"></p>
+        <p id="diemDauLuu"></p>
+        <p id="mui_ten1">➜</p>
+        <p id="diemGiuaLuu"></p>
+        <p id="mui_ten2">➜</p>
+        <p id="diemCuoiLuu"></p>
+      </div>
+      <p class="normalText">TRẠNG THÁI HOẠT ĐỘNG</p>
+      <table class="Table">
+        <tr>
+          <th>CHẠY?</th>
+          <th>TẠM DỪNG?</th>
+          <th>CHẠY CHỮ?</th>
+          <th>MODE</th>
+          <!-- <th>XE ĐIỆN 1</th>  -->
+          <!-- không phải xe buýt điện mà là CÔNG TY CỔ PHẦN XE ĐIỆN HÀ NỘI (454 Phạm Văn Đồng) -->
+        </tr>
+        <tr>
+          <td id="isRunning"></td>
+          <td id="isPausing">NO</td>
+          <td id="isTextMoving">NO</td>
+          <td id="MODE">THƯỜNG</td>
+          <!-- <td id="isXD1">NO</td> -->
+        </tr>
+      </table>
+    </div>
+    <div id="thongTin" class="hiddenDiv">
+      <p class="normalText">BẢNG ĐIỆN TỬ XE BUÝT BÁN TỰ ĐỘNG</p>
+      <div id="logobus">
+        <p class="normalText">Special Thanks to</p>
+        <img src="assets/image/logohanoibus.png" alt="Transerco Hanoibus" srcset="">
+      </div>
+      <a href="hdsd.html">
+        <p class="normalText">HƯỚNG DẪN SỬ DỤNG</p>
+      </a>
+      <p class="normalText">
+        Tác giả:
+        <a href="https://github.com/mhieu1296" target="_blank" style="color: red">NGUYỄN MINH HIẾU</a>, KTPM02 K19 HAUI
+        ✨
+        <br />
+        Code có xấu xin các anh chị bỏ qua cho nhé 😭 <br />
+        Vì sứ mệnh thay thế cho biển lật! <br />
+        Bản quyền các logo thuộc về các cty vận tải công cộng
+      </p>
+
+    </div>
+  </div>
 </body>
+<div id="popup-root" class="p-overlay">
+  <div class="p-box">
+    <button id="p-btn-close" class="p-close-icon" title="Đóng">
+      <i class="fa-regular fa-circle-xmark"></i>
+    </button>
+
+    <h2 id="p-title">Tiêu đề</h2>
+    <p id="p-msg">Nội dung thông báo sẽ hiển thị ở đây.</p>
+
+    <div class="p-buttons">
+      <button id="p-btn-cancel" class="p-btn p-secondary">Hủy bỏ</button>
+      <button id="p-btn-ok" class="p-btn p-primary">Đồng ý</button>
+    </div>
+  </div>
+</div>
+
 </html>
